// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> just render with a custom text 1`] = `
<h3
  className="title"
>
  Hello world
</h3>
`;

exports[`<Title /> just render with default props 1`] = `
<h3
  className="title"
>
  Title here
</h3>
`;
